<resources>
    <string name="app_name">Food Nearby</string>
    <string name="btn_facebook_v2"></string>
    <string name="btn_twitter_v2"></string>
    <string name="btn_email_v2"></string>
    <string name="btn_tieneCuenta_v2"></string>
    <string name="btn_facebook_v3"></string>"
    <string name="btn_email_v3"></string>
    <string name="btn_inscribirse_v3"></string>
    <string name="btn_twitter_v4"></string>"
    <string name="btn_email_v4"></string>
    <string name="btn_inscribirse_v4"></string>
    <string name="regresar"></string>

    <string name="item">Mas</string>
    <string name="item1">Inicio</string>
    <string name="item2">Buscar</string>
    <string name="item3">Notificaciones</string>
    <string name="item4">Mis compras</string>
    <string name="item5">Favoritos</string>
    <string name="item6">Ofertas</string>
    <string name="item7">Historial</string>
    <string name="item8">Ayuda</string>
    <string name="item9">Mercado</string>
    <string name="item10">Categorías</string>
    <string name="item11">Cerrar sesión</string>
    <string name="open">open</string>
    <string name="close">close</string>


</resources>